refactor: 이메일 안내 문구를 텍스트 블록으로 변경